@@ -54,6 +54,7 @@ typedef struct _GChecksum       GChecksum;
 gssize                g_checksum_type_get_length (GChecksumType checksum_type);
 
 GChecksum *           g_checksum_new        (GChecksumType     checksum_type);
+void                  g_checksum_reset      (GChecksum        *checksum);
 GChecksum *           g_checksum_copy       (const GChecksum  *checksum);
 void                  g_checksum_free       (GChecksum        *checksum);
 void                  g_checksum_update     (GChecksum        *checksum,
